--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,7 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Methods for Adding CSS</title>
+
     <link rel="stylesheet" href="./css/styles.css" />
+
+    <style>
+      div {
+        background: red;
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+        text-align: center;
+      }
+
+      p {
+        background: green;
+        color: white;
+        font-size: 18px;
+      }
+
+      button {
+        background: orange;
+        font-size: 18px;
+      }
+    </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
