Add inline styles to div p and button

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -30,8 +30,20 @@
     </style>
   </head>
   <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <div
+      style="
+        background: red;
+        color: white;
+        font-size: 32px;
+        font-weight: bold;
+        text-align: center;
+      "
+    >
+      Style me via the external method!
+    </div>
+    <p style="background: green; color: white; font-size: 18px">
+      I would like to be styled with the internal method, please.
+    </p>
+    <button style="background: orange; font-size: 18px">Inline Method</button>
   </body>
 </html>
